<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_horarios"
            android:icon="@drawable/ic_menu_horario"
            android:title="@string/menu_horarios" />



        <item
            android:title="@string/menu_rutas">
            <menu>
                <item
                    android:id="@+id/ruta1"
                    android:icon="@drawable/ic_rutas"
                    android:title="@string/ruta1" >

                </item>
                <item
                    android:id="@+id/ruta2"
                    android:icon="@drawable/ic_rutas"
                    android:title="@string/ruta2" />
                <item
                    android:id="@+id/ruta3"
                    android:icon="@drawable/ic_rutas"
                    android:title="@string/ruta3" >

                </item>
                <item
                    android:id="@+id/ruta4"
                    android:icon="@drawable/ic_rutas"
                    android:title="@string/ruta4" />
                <item
                    android:id="@+id/ruta5"
                    android:icon="@drawable/ic_rutas"
                    android:title="@string/ruta5" >

                </item>
                <item
                    android:id="@+id/ruta6"
                    android:icon="@drawable/ic_rutas"
                    android:title="@string/ruta6" />
                <item
                    android:id="@+id/ruta7"
                    android:icon="@drawable/ic_rutas"
                    android:title="@string/ruta7" />

            </menu>
        </item>


    </group>

    <item android:title="Opcion">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_person_black_24dp"

                android:title="@string/menu_perfil" >

            </item>
            <item
                android:id="@+id/nav_end"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/menu_end" />
        </menu>
    </item>

</menu>
